--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@nuxt/typescript-build": "^0.6.5",
+    "@nuxtjs/axios": "^5.10.3",
     "nuxt": "^2.12.2",
-    "nuxt-property-decorator": "^2.7.2"
+    "nuxt-property-decorator": "^2.7.2",
+    "reset.css": "^2.0.2"
   },
   "devDependencies": {
     "@nuxt/typescript-runtime": "^0.4.5",
